registration webservice client code

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,7 @@ dist.jar=${dist.dir}/FameDen.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.twitter4j-async-3.0.4-SNAPSHOT.jar=C:\\Users\\Ravjot\\Desktop\\twitter4j-3.0.4-SNAPSHOT\\lib\\twitter4j-async-3.0.4-SNAPSHOT.jar
-file.reference.twitter4j-core-3.0.4-SNAPSHOT.jar=C:\\Users\\Ravjot\\Desktop\\twitter4j-3.0.4-SNAPSHOT\\lib\\twitter4j-core-3.0.4-SNAPSHOT.jar
-file.reference.twitter4j-examples-3.0.4-SNAPSHOT.jar=C:\\Users\\Ravjot\\Desktop\\twitter4j-3.0.4-SNAPSHOT\\lib\\twitter4j-examples-3.0.4-SNAPSHOT.jar
-file.reference.twitter4j-media-support-3.0.4-SNAPSHOT.jar=C:\\Users\\Ravjot\\Desktop\\twitter4j-3.0.4-SNAPSHOT\\lib\\twitter4j-media-support-3.0.4-SNAPSHOT.jar
-file.reference.twitter4j-stream-3.0.4-SNAPSHOT.jar=C:\\Users\\Ravjot\\Desktop\\twitter4j-3.0.4-SNAPSHOT\\lib\\twitter4j-stream-3.0.4-SNAPSHOT.jar
+file.reference.twitter4j-core-3.0.4-SNAPSHOT.jar=C:\\Users\\Rav\\Documents\\NetBeansProjects\\FameDen\\dist\\lib\\twitter4j-core-3.0.4-SNAPSHOT.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -43,11 +39,7 @@ javac.classpath=\
     ${javafx.runtime}/lib/deploy.jar:\
     ${javafx.runtime}/lib/javaws.jar:\
     ${javafx.runtime}/lib/plugin.jar:\
-    ${file.reference.twitter4j-async-3.0.4-SNAPSHOT.jar}:\
-    ${file.reference.twitter4j-core-3.0.4-SNAPSHOT.jar}:\
-    ${file.reference.twitter4j-examples-3.0.4-SNAPSHOT.jar}:\
-    ${file.reference.twitter4j-media-support-3.0.4-SNAPSHOT.jar}:\
-    ${file.reference.twitter4j-stream-3.0.4-SNAPSHOT.jar}
+    ${file.reference.twitter4j-core-3.0.4-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
