registration webservice client code

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,10 @@ dist.jar=${dist.dir}/FameDen.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-collections-3.1.jar=D:\\hibernate apis\\commons-collections-3.1.jar
+file.reference.slf4j-api-1.6.1.jar=D:\\hibernate apis\\slf4j-api-1.6.1.jar
+file.reference.slf4j-jdk14-1.7.5.jar=D:\\hibernate apis\\slf4j-1.7.5\\slf4j-1.7.5\\slf4j-jdk14-1.7.5.jar
+file.reference.slf4j-log4j12-1.7.5.jar=D:\\hibernate apis\\slf4j-1.7.5\\slf4j-1.7.5\\slf4j-log4j12-1.7.5.jar
 file.reference.twitter4j-core-3.0.4-SNAPSHOT.jar=C:\\Users\\Rav\\Documents\\NetBeansProjects\\FameDen\\dist\\lib\\twitter4j-core-3.0.4-SNAPSHOT.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -39,7 +43,11 @@ javac.classpath=\
     ${javafx.runtime}/lib/deploy.jar:\
     ${javafx.runtime}/lib/javaws.jar:\
     ${javafx.runtime}/lib/plugin.jar:\
-    ${file.reference.twitter4j-core-3.0.4-SNAPSHOT.jar}
+    ${file.reference.twitter4j-core-3.0.4-SNAPSHOT.jar}:\
+    ${file.reference.commons-collections-3.1.jar}:\
+    ${file.reference.slf4j-api-1.6.1.jar}:\
+    ${file.reference.slf4j-jdk14-1.7.5.jar}:\
+    ${file.reference.slf4j-log4j12-1.7.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
