registration webservice client code

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-collections-3.1.jar=D:\\hibernate apis\\commons-collections-3.1.jar
+file.reference.ipAddressFinder.jar=D:\\hibernate apis\\ipAddressFinder.jar
 file.reference.slf4j-api-1.6.1.jar=D:\\hibernate apis\\slf4j-api-1.6.1.jar
 file.reference.slf4j-jdk14-1.7.5.jar=D:\\hibernate apis\\slf4j-1.7.5\\slf4j-1.7.5\\slf4j-jdk14-1.7.5.jar
 file.reference.slf4j-log4j12-1.7.5.jar=D:\\hibernate apis\\slf4j-1.7.5\\slf4j-1.7.5\\slf4j-log4j12-1.7.5.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.commons-collections-3.1.jar}:\
     ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.slf4j-jdk14-1.7.5.jar}:\
-    ${file.reference.slf4j-log4j12-1.7.5.jar}
+    ${file.reference.slf4j-log4j12-1.7.5.jar}:\
+    ${file.reference.ipAddressFinder.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
